--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bookly - Bookstore eCommerce Website Template</title>
+    <title>Bookly - We provide competitive pricing, discounts, and the ability to instantly download digital books</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1605,8 +1605,7 @@
               <div class="col-lg-3 col-sm-6 pb-3">
                 <div class="footer-menu">
                   <img src="images/main-logo.png" alt="logo" class="img-fluid mb-2">
-                  <p>Nisi, purus vitae, ultrices nunc. Sit ac sit suscipit hendrerit. Gravida massa volutpat aenean odio
-                    erat nullam fringilla.</p>
+                  <p>An online bookstore is a digital platform that allows users to browse, purchase, and sometimes even rent books from the comfort of their homes. These stores offer a vast selection of titles, including physical copies, e-books, and audiobooks, catering to a wide range of readers. With features like customer reviews, personalized recommendations, and easy access to global literature, online bookstores have become a convenient and popular alternative to traditional brick-and-mortar stores. Additionally, they often provide competitive pricing, discounts, and the ability to instantly download digital books.</p>
                   <div class="social-links">
                     <ul class="d-flex list-unstyled">
                       <li>
