--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
               </div>
               <div class="icon-box-content">
                 <h4 class="card-title mb-1 text-capitalize text-dark">Free delivery</h4>
-                <p>Consectetur adipi elit lorem ipsum dolor sit amet.</p>
+                <p>delivery to your doorstep within 48 hours.</p>
               </div>
             </div>
           </div>
@@ -548,7 +548,7 @@
               </div>
               <div class="icon-box-content">
                 <h4 class="card-title mb-1 text-capitalize text-dark">Quality guarantee</h4>
-                <p>Dolor sit amet orem ipsu mcons ectetur adipi elit.</p>
+                <p>Quality paperback editions for every book</p>
               </div>
             </div>
           </div>
@@ -561,7 +561,7 @@
               </div>
               <div class="icon-box-content">
                 <h4 class="card-title mb-1 text-capitalize text-dark">Daily offers</h4>
-                <p>Amet consectetur adipi elit loreme ipsum dolor sit.</p>
+                <p>Get your discount offers daily by visiting dicount section.</p>
               </div>
             </div>
           </div>
@@ -574,7 +574,7 @@
               </div>
               <div class="icon-box-content">
                 <h4 class="card-title mb-1 text-capitalize text-dark">100% secure payment</h4>
-                <p>Rem Lopsum dolor sit amet, consectetur adipi elit.</p>
+                <p>Norotn secured payment gateway for your security.</p>
               </div>
             </div>
           </div>
